--- a/package.json
+++ b/package.json
@@ -10,10 +10,20 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/geolocation": "^2.0.2",
+    "@react-navigation/native": "^5.9.4",
+    "@react-navigation/stack": "^5.14.4",
     "galio-framework": "^0.8.0",
     "react": "17.0.1",
     "react-native": "0.64.0",
-    "react-native-vector-icons": "^8.1.0"
+    "react-native-gesture-handler": "^1.10.3",
+    "react-native-reanimated": "^2.1.0",
+    "react-native-safe-area-context": "^3.2.0",
+    "react-native-safe-area-view": "^1.1.1",
+    "react-native-screens": "^3.1.1",
+    "react-native-vector-icons": "^8.1.0",
+    "react-navigation": "^4.4.4",
+    "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
     "@babel/core": "^7.13.15",
