--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "galio-framework": "^0.8.0",
     "react": "17.0.1",
     "react-native": "0.64.0",
+    "react-native-fs": "^2.17.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
